@@ -1,3 +1,4 @@
+    ADDED: dbus interface: org.krusader.Instance.openUrl(QString url)
     ADDED: search dialog > feed to listbox:
            search parameters are saved as metadata in the virtual fs
            and displayed in panel's statusbar
@@ -5,6 +6,9 @@
     ADDED: action: view > Apply settings to other tabs
     ADDED: action: view > Save settings as default (for new instances of this view type)
     ADDED: option: Panel > View > Locale aware sorting
+
+    CHANGED: url commandline arguemnt: if there is already a tab open with that url,
+             it is activated, otherwis a new tab is opened in the active panel
 
     FIXED: [ 2898151 ] also in view-mode (F3) possible to edit, thanks to Kevin Kofler
     FIXED: panelpopup viewer: error messageboxes when file cannot be displayed
